[bumpversion]
current_version = 0.2.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:csp_billing_adapter_test/__init__.py]

[bumpversion:file:csp-billing-adapter-test.spec]

[tool:pytest]
testpaths = tests
norecursedirs = data

[coverage:report]
fail_under = 90

[metadata]
license_file = LICENSE
